[gd_scene load_steps=8 format=3 uid="uid://d2gefhko3sbry"]

[ext_resource type="Script" path="res://misc_scenes/floor_effects_handler.gd" id="1_o44qe"]
[ext_resource type="Shader" path="res://shaders/fire.gdshader" id="2_e0enu"]
[ext_resource type="Shader" path="res://shaders/ice.gdshader" id="3_rx1tf"]
[ext_resource type="Shader" path="res://shaders/water.gdshader" id="4_t8jm0"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fgpo6"]
shader = ExtResource("2_e0enu")
shader_parameter/polygon = null

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5vpvw"]
shader = ExtResource("3_rx1tf")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6e0xj"]
shader = ExtResource("4_t8jm0")

[node name="FloorEffectsHandler" type="Node2D" groups=["floor_effects_handler"]]
visibility_layer = 2
z_index = 1
z_as_relative = false
script = ExtResource("1_o44qe")
decay_rate = 500
resolution_factor = 4

[node name="FireGraphic" type="Polygon2D" parent="."]
z_index = 1
z_as_relative = false
material = SubResource("ShaderMaterial_fgpo6")

[node name="IceGraphic" type="Polygon2D" parent="."]
z_index = 1
z_as_relative = false
material = SubResource("ShaderMaterial_5vpvw")

[node name="WaterGraphic" type="Polygon2D" parent="."]
z_index = 1
z_as_relative = false
material = SubResource("ShaderMaterial_6e0xj")

[node name="Fire" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 0

[node name="Ice" type="Area2D" parent="."]
collision_layer = 129
collision_mask = 0

[node name="Water" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 0

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(4, 4)
